--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    
   </head>
   <body>
-    <include src="./partials/headerfirst.html"></include>
+    <include  src="./partials/headerfirst.html" ></include>
+    <include  src="./partials/headersecond.html" ></include>
+    <include src="./partials/loremup.html"></include>
+    <include src="./partials/timer.html"></include>
+    <include src="./partials/loremdown.html"></include>
+    <include  src="./partials/footerfirst.html"></include>
+    <include  src="./partials/footersecond.html" ></include>
+    <include  src="./partials/btnup.html" ></include>
   </body>
+  <script type="module" src="./index.js"></script>
+  <script type="module" src="./js/btnup.js"></script>
+  <script type="module" src="./js/timer.js"></script>
+  <script type="module" src="./js/lorem.js"></script>
 </html>
